update no index-1

--- a/exercicios/ex001/index.html
+++ b/exercicios/ex001/index.html
@@ -11,5 +11,7 @@
     <hr>
     <p>Esse é um documento em HTML</p>
     <p>Estou criando um site</p>
+    <hr>
+    <h2>Este foi o meu primeiro site.</h2>
 </body>
 </html>
